query.css
#sidebar {
    position: absolute;
    top: 0;
    right: 0;
    width: 200px;
    height: 100%;
    background-color: #f0f0f0;
    padding: 10px;
    margin-right: 210px;
    box-sizing: border-box;
    overflow: auto;
}

#sidebarList{
    position: absolute;
    top: 0;
    right: 0;
    width: 200px;
    height: 100%;
    background-color: #cca8a8;
    padding: 10px;
    box-sizing: border-box;
    overflow: auto;
}

table {
    border-collapse: collapse;
    width: 100%;
  }
  
  th, td {
    text-align: center;
    padding: 8px;
  }
  
  th {
    background-color: #f2f2f2;
  }
  
  tr:nth-child(even) {
    background-color: #f2f2f2;
  }
  
  tr:hover {
    background-color: #ddd;
  }
  

